--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru" class="page">
+  @include('partials/head.html')
 
-@include('partials/head.html')
-
-<body class="page__body">
-  <div class="site-container">
-    @include('partials/header.html')
-    <main class="main">
-      @include('partials/hero.html')
-      @include('partials/about.html')
-      @include('partials/production.html')
-    </main>
-    @include('partials/footer.html')
-  </div>
-</body>
-
+  <body class="page__body">
+    <div class="site-container">
+      @include('partials/header.html')
+      <main class="main">
+        @include('partials/hero.html') @include('partials/about.html')
+        @include('partials/production.html') @include('partials/present.html')
+        @include('partials/news.html')
+      </main>
+      @include('partials/footer.html')
+    </div>
+  </body>
 </html>
